added signup functionality